--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,11 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
+      - name: install package
+        run: |
+             pip install wechatpy
+             pip install http
+      
       - name: Run a one-line script
         run: python main.py
 
